# fingerd

./: README.md  finger.db  fingerd.cabal
src/: Debug.hs  Main.hs
src/Users/: Database.hs  Handlers.hs  Parse.hs  Queries.hs  Types.hs
