name:               fingerd
version:            0.1.0.0
synopsis:           Simple project template
description:        Please see README.md
homepage:           https://github.com/u/fingerd
license:            BSD3
license-file:       LICENSE
author:             Chris Allen
maintainer:         cma@bitemyapp.com
copyright:          2016, Chris Allen
category:           Web
build-type:         Simple
cabal-version:      >=1.10

executable debug
  ghc-options:      -Wall
  hs-source-dirs:    src
  main-is:           Debug.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , network

executable fingerd
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Users.Handlers,
                      Users.Queries,
                      Users.Types
  build-depends:      base >= 4.7 && < 5
                    , bytestring
                    , network
                    , raw-strings-qq
                    , sqlite-simple
                    , text
                    , word8